one correction where we actually want block-gap

--- a/assets/src/less/blocks/wp-block-columns/layout.less
+++ b/assets/src/less/blocks/wp-block-columns/layout.less
@@ -5,7 +5,7 @@
 .wp-block-columns {
 
 	display: flex;
-	gap: @wp-spacing-30;
+	gap: var(--wp--style--block-gap, 1.5em );
 
 /*
 	Handle media queries in child theme,
